@@ -1,9 +1,10 @@
 package com.effective.common.netty.cluster.transport.codec;
 
 
-import com.effective.common.netty.cluster.command.BaseCommand;
-import com.effective.common.netty.cluster.command.CommandClassType;
-import com.effective.common.netty.cluster.handler.CommandHeader;
+import com.effective.common.netty.cluster.command.api.AbstractCommand;
+import com.effective.common.netty.cluster.command.domain.HeaderCommand;
+import com.effective.common.netty.cluster.command.factory.CommandFactory;
+import com.effective.common.netty.cluster.constants.NettyAttrManager;
 import com.effective.common.netty.cluster.transport.compression.Compression;
 import com.effective.common.netty.cluster.transport.compression.CompressionSelector;
 import com.effective.common.netty.cluster.transport.protocol.CommandProtocol;
@@ -11,7 +12,7 @@ import com.effective.common.netty.cluster.transport.protocol.Protocol;
 import com.effective.common.netty.cluster.transport.serialization.Serialization;
 import com.effective.common.netty.cluster.transport.serialization.SerializationSelector;
 import com.effective.common.netty.cluster.utils.JSONUtil;
-import com.effective.common.netty.cluster.utils.io.ChannelUtil;
+import com.effective.common.netty.cluster.utils.ObjectUtils;
 import io.netty.buffer.ByteBuf;
 import io.netty.buffer.ByteBufInputStream;
 import io.netty.channel.ChannelHandlerContext;
@@ -26,7 +27,7 @@ import java.util.Arrays;
 import java.util.Objects;
 
 /**
- * Command decoder
+ * 解码器
  */
 @Slf4j
 public class CommandDecoder extends LengthFieldBasedFrameDecoder {
@@ -46,28 +47,26 @@ public class CommandDecoder extends LengthFieldBasedFrameDecoder {
         try {
             in.markReaderIndex();
             if (in.readableBytes() < protocol.getMagicCode().length) {
-                log.error("[###CommandDecoder###]Readable bytes is less than magic code length!");
+                log.error("【解码器】Readable bytes is less than magic code length!");
                 return null;
             }
             byte[] magicCode = new byte[protocol.getMagicCode().length];
             in.getBytes(in.readerIndex(), magicCode);
             if (!Arrays.equals(magicCode, protocol.getMagicCode())) {
-                log.error("[###CommandDecoder###]This type of magicCode is not supported!");
+                log.error("【解码器】This type of magicCode is not supported!");
                 return null;
             } else {
                 in.skipBytes(magicCode.length);
             }
             frame = (ByteBuf) super.decode(ctx, in);
             if (Objects.isNull(frame)) {
-                if (log.isInfoEnabled()) {
-                    log.info("[###CommandDecoder###]Decode error, frame is null!");
-                }
+                ObjectUtils.isTrue(log.isInfoEnabled(), "", x -> log.info("【解码器】Decode error, frame is null!"));
                 in.resetReaderIndex();
                 return null;
             }
-            CommandHeader header = new CommandHeader().decode(frame);
+            HeaderCommand header = new HeaderCommand().decode(frame);
             if (Objects.isNull(header)) {
-                log.error("[###CommandDecoder###]Decode error, header is null!");
+                log.error("【解码器】Decode error, header is null!");
                 in.resetReaderIndex();
                 return null;
             }
@@ -78,23 +77,19 @@ public class CommandDecoder extends LengthFieldBasedFrameDecoder {
             Compression compression = CompressionSelector.select(header.getCompression());
             InputStream inputStream = new ByteBufInputStream(frame);
             inputStream = compression == null ? inputStream : compression.decompress(inputStream);
-            if (log.isDebugEnabled()) {
-                log.debug("[###CommandDecoder###]Decode compression={}, inputStream={}", header.getCompression(), inputStream.getClass().getCanonicalName());
-            }
-            CommandClassType commandClassType = CommandClassType.nameOf(header.getCommandName());
-            // Object payload = serialization.getSerializer().deserialize(inputStream,
-            //         ((ParameterizedType) commandClassType.getClazz().getGenericSuperclass()).getActualTypeArguments()[0]);
-            BaseCommand command = (BaseCommand) commandClassType.getClazz().newInstance();
+            String className = inputStream.getClass().getCanonicalName();
+
+            ObjectUtils.isTrue(log.isInfoEnabled(), "", x -> log.info("【解码器】Decode compression={}, inputStream={}", header.getCompression(), className));
+
+            CommandFactory commandFactory = CommandFactory.match(header.getCommandName());
+            AbstractCommand command = (AbstractCommand) commandFactory.getClazz().getConstructor().newInstance();
             command.setHeader(header);
-            command.setCommandBody(deserialize(serialization, inputStream, commandClassType));
-            if (log.isDebugEnabled()) {
-                log.debug("[###CommandDecoder###]Decode success, command={}, type={}", JSONUtil.bean2Json(command),
-                        command.getClass().getCanonicalName());
-            }
+            command.setCommandBody(deserialize(serialization, inputStream, commandFactory));
+            ObjectUtils.isTrue(log.isInfoEnabled(),"",x -> log.info("【解码器】Decode success, command={}, type={}", JSONUtil.bean2Json(command), command.getClass().getCanonicalName()));
             return command;
         } catch (Exception ex) {
-            log.error("[###CommandDecoder###]Decode exception, message={}", ex.getMessage(), ex);
-            ChannelUtil.closeChannel(ctx.channel());
+            log.error("【解码器】Decode exception, message={}", ex.getMessage(), ex);
+            NettyAttrManager.closeChannel(ctx.channel());
         } finally {
             if (null != frame) {
                 frame.release();
@@ -108,11 +103,11 @@ public class CommandDecoder extends LengthFieldBasedFrameDecoder {
      *
      * @param serialization
      * @param inputStream
-     * @param commandClassType
+     * @param commandFactory
      * @return
      */
-    private Object deserialize(Serialization serialization, InputStream inputStream, CommandClassType commandClassType) throws IOException {
-        return serialization.getSerializer().deserialize(inputStream, getPayloadClass(commandClassType));
+    private Object deserialize(Serialization serialization, InputStream inputStream, CommandFactory commandFactory) throws IOException {
+        return serialization.getSerializer().deserialize(inputStream, getPayloadClass(commandFactory));
     }
 
     /**
@@ -121,7 +116,7 @@ public class CommandDecoder extends LengthFieldBasedFrameDecoder {
      * @param type 命令类型
      * @return 包体类
      */
-    protected Class getPayloadClass(final CommandClassType type) {
+    protected Class getPayloadClass(final CommandFactory type) {
         return (Class) ((ParameterizedType) type.getClazz().getGenericSuperclass()).getActualTypeArguments()[0];
     }
 }
